# PythonFundamentals

./: README.md
Clases/Clase00/: Clase00.md
Clases/modulo00/: Clase00.md
Clases/modulo01/: Clase02.md
proyecto/: pyproject.toml
proyecto/proyecto/: __init__.py
proyecto/proyecto.egg-info/: PKG-INFO
proyecto/proyecto/covid19/: covid.py
proyecto/proyecto/graficos/: historicos.py
proyecto/proyecto/sir/: sir.py
proyecto/proyecto/utils/: datos.py
proyecto/tests/: test_proyecto.py
