[tool.poetry]
name = "proyecto"
version = "0.1.0"
description = ""
authors = ["MJChimal <mjchimal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.4"
plotly = "^4.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
